--- a/lesson-html/index.html
+++ b/lesson-html/index.html
@@ -14,43 +14,35 @@
         <div class="header-left">
           <img class="logo" src="image/kit1.png">
         </div>
-        <span class="fa fa-bars menu-icon"></span>
+        <a href="#" class="menu-icon">
+        <span class="fa fa-bars"></span>
+        </a>
 
         <div class="header-right">
-        <div class="header2">
-            <a href="#" class="About">About</a>
-        </div>
-              <div class="header2">
+            <a href="#" class="Home">Home</a>
             <a href="#" class="Order">Order</a>
-        </div>
-        <div class="header2">
             <a href="#" class="Product">Product</a>
-        </div>
-        <div class="header2">
-          <a href="#" class="Home">Home</a>
-        </div>
+          <a href="#" class="About">About</a>
       </div>
-
-      </div>
+    </div>
     </header>
 
     <div class="top-wrapper">
       <div class="container">
-        <p></p>
       </div>
       </div>
     </div>
 
-    <div class="top1-wrapper">
       <div class="container">
+        <div class="top1-wrapper">
         <p>Winter is coming☃️, you are invited to our store and grab a bite of cake 😉from us.. Bundle up, buy a large hot chocolate with whipped cream and enjoy it with our special delicacies</p>
-          <a href="#" class="btn detail"> More Detail</a>
         </div>
+        <a href="#" class="btn detail"> More Detail</a>
       </div>
     </div>
 
-    <div class="news-wrapper">
-      <div class="container">
+    <div class="container">
+      <div class="news-wrapper">
         <div class="heading">
           <h1>Linking Our Best Bites!</h1>
         </div>
